thought maybe the extra space was caused by the menu, they are the same size. May still be the issue but not sure the fix yet.

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ nav ul {
 
 	.menu {
 		display: flex;
-		position: absolute;
+		position: fixed;
 		top: 0em;
 		left: -10em;
 		padding-top: 3.4em;
